--- a/scss/master.scss
+++ b/scss/master.scss
@@ -30,7 +30,7 @@ content {
   align-items: center;
   //border:1px solid green;
   @include for-phone-only {
-    max-width: 100%;
+    width: 95%;
   }
 }
 
@@ -73,28 +73,65 @@ nav {
 footer {
   background-color: $black;
   width: 100%;
-  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   section.footer-box{
     display:grid;
-    width:1080px;
-    height:500px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-row-gap: 25px;
-      aside.footer-note{
-        grid-column: 1/4;
-        grid-row:1/2;
-        padding-bottom: 20px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 250px;
+    border-top: 0.5px dotted $white;
+    @include for-phone-only{
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(5,1fr);
+    }
+    aside.footnote,aside.footcontact,aside.elsewhere,aside.credit{
+      color:$white;
+      @include for-phone-only{
+      text-align: left;
+      grid-column: 1/3;
       }
-      aside.footer-contact{
+    }
+    aside.footnote{
+      grid-column: 1/3;
+      grid-row:1/2;
+      @include for-phone-only{
+        grid-row: 1/3;
         grid-column: 1/3;
-        grid-row:2/3;
       }
+    }
+    aside.footcontact{
+      grid-column: 3/4;
+      text-align: right;
+      grid-row:1/2;
+      @include for-phone-only{
+        grid-row: 3/4;
+        grid-column: 1/3;
+        text-align: left;
 
+      }
+    }
+    aside.elsewhere{
+      grid-column: 4/5;
+      text-align: right;
+      grid-row:1/2;
+      @include for-phone-only{
+        grid-row: 4/5;
+        grid-column: 1/3;
+        text-align: left;
+      }
+    }
+    aside.credit{
+      grid-column: 5/6;
+      text-align: right;
+      grid-row:1/2;
+      @include for-phone-only{
+        grid-row: 5/6;
+        grid-column: 1/3;
+        text-align: left;
+      }
+    }
   }
 
 }
@@ -113,6 +150,12 @@ button.home {
   transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
   cursor: pointer;
+  @include for-tablet-portait-up{
+  width: 100%;
+  }
+  @include for-tablet-landscape-up{
+  width: 100%;
+  }
 }
 
 button:hover {
