--- a/css/master.css
+++ b/css/master.css
@@ -105,7 +105,8 @@ a.nav-links:hover {
 
 ul {
   text-decoration: none;
-  padding: 0; }
+  padding: 0;
+  margin: 5px 0 15px 0px; }
   @media (max-width: 425px) {
     ul {
       font-size: 14px;
@@ -156,7 +157,7 @@ section.about {
   @media (max-width: 768px) {
     section.about {
       padding-top: 25px;
-      padding-bottom: 25px;
+      padding-bottom: 85px;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(4, 1fr); } }
   section.about aside.biography {
@@ -310,60 +311,90 @@ section.projects {
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster4.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch1 {
+      background-size: 99%; } }
 
 #poster-sketch2 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch2.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch2 {
+      background-size: 99%; } }
 
 #poster-sketch3 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch3.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch3 {
+      background-size: 99%; } }
 
 #poster-sketch4 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch4.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch4 {
+      background-size: 99%; } }
 
 #poster-sketch5 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch5.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch5 {
+      background-size: 99%; } }
 
 #sketch-poster1 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch1.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster1 {
+      background-size: 99%; } }
 
 #sketch-poster2 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch2.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster2 {
+      background-size: 99%; } }
 
 #sketch-poster3 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch3.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster3 {
+      background-size: 99%; } }
 
 #sketch-poster4 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch4.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster4 {
+      background-size: 99%; } }
 
 #sketch-poster5 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch5.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster5 {
+      background-size: 99%; } }
 
 .am-slider {
   height: 580px;
@@ -429,6 +460,33 @@ section.projects {
 
 .sw-sliderlarge {
   height: 600px; }
+
+#sw-webex1 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-webex1.png"); }
+  @media (max-width: 425px) {
+    #sw-webex1 {
+      background-image: url("../img/swish/sw-webex1-r.png"); } }
+
+#sw-webex2 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-webex2.png"); }
+  @media (max-width: 425px) {
+    #sw-webex2 {
+      background-image: url("../img/swish/sw-webex2-r.png"); } }
+
+#sw-webex3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-webex3.png"); }
+  @media (max-width: 425px) {
+    #sw-webex3 {
+      background-image: url("../img/swish/sw-webex3-r.png"); } }
 
 #sw-research1 {
   background-position: center;
@@ -628,6 +686,15 @@ section.projects {
     #sw-sketch2 {
       background-size: 99%; } }
 
+#sw-sketch3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-sketch3.png"); }
+  @media (max-width: 425px) {
+    #sw-sketch3 {
+      background-size: 99%; } }
+
 #sw-wireframe1 {
   background-position: center;
   background-size: cover;
@@ -663,6 +730,42 @@ section.projects {
   @media (max-width: 425px) {
     #sw-wireframe4 {
       background-size: 99%; } }
+
+#milya-feature1 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature1.png"); }
+@media (max-width: 425px) and (max-width: 425px) {
+  #milya-feature1 {
+    background-image: url("../img/milya/milya-feature1-r.png"); } }
+
+#milya-feature2 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature2.png"); }
+  @media (max-width: 425px) {
+    #milya-feature2 {
+      background-image: url("../img/milya/milya-feature2-r.png"); } }
+
+#milya-feature3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature3.png"); }
+  @media (max-width: 425px) {
+    #milya-feature3 {
+      background-image: url("../img/milya/milya-feature3-r.png"); } }
+
+#milya-feature4 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature4.png"); }
+  @media (max-width: 425px) {
+    #milya-feature4 {
+      background-image: url("../img/milya/milya-feature4-r.png"); } }
 
 #sw-browser1 {
   background-position: center;
@@ -774,42 +877,63 @@ section.projects {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-branding.png"); }
+  @media (max-width: 425px) {
+    #milya-branding {
+      background-size: 99%; } }
 
 #milya-icons {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-icons.png"); }
+  @media (max-width: 425px) {
+    #milya-icons {
+      background-size: 99%; } }
 
 #milya-research1 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-research1.png"); }
+  @media (max-width: 425px) {
+    #milya-research1 {
+      background-size: 99%; } }
 
 #milya-research2 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-research2.png"); }
+  @media (max-width: 425px) {
+    #milya-research2 {
+      background-size: 99%; } }
 
 #milya-research3 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-research3.png"); }
+  @media (max-width: 425px) {
+    #milya-research3 {
+      background-size: 99%; } }
 
 #milya-sketch {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-sketch1.png"); }
+  @media (max-width: 425px) {
+    #milya-sketch {
+      background-size: 99%; } }
 
 #milya-wireframe1 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-wireframe.png"); }
+  @media (max-width: 425px) {
+    #milya-wireframe1 {
+      background-size: 99%; } }
 
 #milya-msg1 {
   background-position: center;
@@ -840,6 +964,15 @@ section.projects {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-msg5.png"); }
+
+#milya-msg6 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-msg6.png"); }
+  @media (max-width: 425px) {
+    #milya-msg6 {
+      background-image: url("../img/milya/milya-feature2-r.png"); } }
 
 h1,
 h2,
@@ -940,7 +1073,8 @@ a.nav-links:hover {
 
 ul {
   text-decoration: none;
-  padding: 0; }
+  padding: 0;
+  margin: 5px 0 15px 0px; }
   @media (max-width: 425px) {
     ul {
       font-size: 14px;
@@ -1069,7 +1203,8 @@ a.nav-links:hover {
 
 ul {
   text-decoration: none;
-  padding: 0; }
+  padding: 0;
+  margin: 5px 0 15px 0px; }
   @media (max-width: 425px) {
     ul {
       font-size: 14px;
@@ -1120,7 +1255,7 @@ section.about {
   @media (max-width: 768px) {
     section.about {
       padding-top: 25px;
-      padding-bottom: 25px;
+      padding-bottom: 85px;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(4, 1fr); } }
   section.about aside.biography {
@@ -1274,60 +1409,90 @@ section.projects {
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster4.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch1 {
+      background-size: 99%; } }
 
 #poster-sketch2 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch2.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch2 {
+      background-size: 99%; } }
 
 #poster-sketch3 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch3.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch3 {
+      background-size: 99%; } }
 
 #poster-sketch4 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch4.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch4 {
+      background-size: 99%; } }
 
 #poster-sketch5 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch5.png"); }
+  @media (max-width: 425px) {
+    #poster-sketch5 {
+      background-size: 99%; } }
 
 #sketch-poster1 {
   background-position: center;
   background-size: 75%;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch1.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster1 {
+      background-size: 99%; } }
 
 #sketch-poster2 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch2.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster2 {
+      background-size: 99%; } }
 
 #sketch-poster3 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch3.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster3 {
+      background-size: 99%; } }
 
 #sketch-poster4 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch4.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster4 {
+      background-size: 99%; } }
 
 #sketch-poster5 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/mposters/poster-sketch5.png"); }
+  @media (max-width: 425px) {
+    #sketch-poster5 {
+      background-size: 99%; } }
 
 .am-slider {
   height: 580px;
@@ -1393,6 +1558,33 @@ section.projects {
 
 .sw-sliderlarge {
   height: 600px; }
+
+#sw-webex1 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-webex1.png"); }
+  @media (max-width: 425px) {
+    #sw-webex1 {
+      background-image: url("../img/swish/sw-webex1-r.png"); } }
+
+#sw-webex2 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-webex2.png"); }
+  @media (max-width: 425px) {
+    #sw-webex2 {
+      background-image: url("../img/swish/sw-webex2-r.png"); } }
+
+#sw-webex3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-webex3.png"); }
+  @media (max-width: 425px) {
+    #sw-webex3 {
+      background-image: url("../img/swish/sw-webex3-r.png"); } }
 
 #sw-research1 {
   background-position: center;
@@ -1592,6 +1784,15 @@ section.projects {
     #sw-sketch2 {
       background-size: 99%; } }
 
+#sw-sketch3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/swish/sw-sketch3.png"); }
+  @media (max-width: 425px) {
+    #sw-sketch3 {
+      background-size: 99%; } }
+
 #sw-wireframe1 {
   background-position: center;
   background-size: cover;
@@ -1627,6 +1828,42 @@ section.projects {
   @media (max-width: 425px) {
     #sw-wireframe4 {
       background-size: 99%; } }
+
+#milya-feature1 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature1.png"); }
+@media (max-width: 425px) and (max-width: 425px) {
+  #milya-feature1 {
+    background-image: url("../img/milya/milya-feature1-r.png"); } }
+
+#milya-feature2 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature2.png"); }
+  @media (max-width: 425px) {
+    #milya-feature2 {
+      background-image: url("../img/milya/milya-feature2-r.png"); } }
+
+#milya-feature3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature3.png"); }
+  @media (max-width: 425px) {
+    #milya-feature3 {
+      background-image: url("../img/milya/milya-feature3-r.png"); } }
+
+#milya-feature4 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-feature4.png"); }
+  @media (max-width: 425px) {
+    #milya-feature4 {
+      background-image: url("../img/milya/milya-feature4-r.png"); } }
 
 #sw-browser1 {
   background-position: center;
@@ -1738,42 +1975,63 @@ section.projects {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-branding.png"); }
+  @media (max-width: 425px) {
+    #milya-branding {
+      background-size: 99%; } }
 
 #milya-icons {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-icons.png"); }
+  @media (max-width: 425px) {
+    #milya-icons {
+      background-size: 99%; } }
 
 #milya-research1 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-research1.png"); }
+  @media (max-width: 425px) {
+    #milya-research1 {
+      background-size: 99%; } }
 
 #milya-research2 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-research2.png"); }
+  @media (max-width: 425px) {
+    #milya-research2 {
+      background-size: 99%; } }
 
 #milya-research3 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-research3.png"); }
+  @media (max-width: 425px) {
+    #milya-research3 {
+      background-size: 99%; } }
 
 #milya-sketch {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-sketch1.png"); }
+  @media (max-width: 425px) {
+    #milya-sketch {
+      background-size: 99%; } }
 
 #milya-wireframe1 {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-wireframe.png"); }
+  @media (max-width: 425px) {
+    #milya-wireframe1 {
+      background-size: 99%; } }
 
 #milya-msg1 {
   background-position: center;
@@ -1804,6 +2062,15 @@ section.projects {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("../img/milya/milya-msg5.png"); }
+
+#milya-msg6 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("../img/milya/milya-msg6.png"); }
+  @media (max-width: 425px) {
+    #milya-msg6 {
+      background-image: url("../img/milya/milya-feature2-r.png"); } }
 
 h1,
 h2,
@@ -1904,7 +2171,8 @@ a.nav-links:hover {
 
 ul {
   text-decoration: none;
-  padding: 0; }
+  padding: 0;
+  margin: 5px 0 15px 0px; }
   @media (max-width: 425px) {
     ul {
       font-size: 14px;
@@ -2059,14 +2327,14 @@ section.project-sketch {
   border-top: 0.5px dotted #2A2A2A;
   padding-top: 35px;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 60px 600px 250px;
+  grid-template-rows: 60px 600px 200px;
   grid-row-gap: 55px;
   grid-column-gap: 35px;
   padding-bottom: 35px; }
   @media (max-width: 425px) {
     section.project-sketch {
       grid-template-rows: 60px 600px repeat(3, 75px);
-      grid-row-gap: 35px;
+      grid-row-gap: 55px;
       padding-bottom: 45px; } }
   section.project-sketch aside.sketch-title {
     text-align: center;
@@ -2096,6 +2364,29 @@ section.project-sketch {
       section.project-sketch aside.sketch-itiration {
         grid-column: 1/7;
         grid-row: 5/6; } }
+
+section.prototype {
+  padding-top: 35px;
+  padding-bottom: 55px;
+  border-top: 0.5px dotted #2A2A2A;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px repeat(3, 570px);
+  grid-row-gap: 55px; }
+  @media (max-width: 425px) {
+    section.prototype {
+      grid-template-rows: 60px repeat(3, 250px); } }
+  section.prototype aside.prototype-title {
+    grid-row: 1/2;
+    grid-column: 1/2; }
+  section.prototype aside.prototype-box1 {
+    grid-row: 2/3;
+    grid-column: 1/2; }
+  section.prototype aside.prototype-box2 {
+    grid-row: 3/4;
+    grid-column: 1/2; }
+  section.prototype aside.prototype-box3 {
+    grid-row: 4/5;
+    grid-column: 1/2; }
 
 section.motion {
   padding-top: 35px;
@@ -2242,6 +2533,9 @@ section.project-gallery {
   grid-template-rows: 70px repeat(5, 600px);
   grid-gap: 35px;
   padding-bottom: 35px; }
+  @media (max-width: 425px) {
+    section.project-gallery {
+      grid-template-rows: 70px repeat(5, 250px); } }
   section.project-gallery aside.gallery-title {
     grid-column: 1/3;
     grid-row: 1/2;
