--- a/scss/_projectstyle.scss
+++ b/scss/_projectstyle.scss
@@ -156,13 +156,13 @@ section.project-sketch {
   border-top: 0.5px dotted $text-grey;
   padding-top: 35px;
   grid-template-columns: repeat(6,1fr);
-  grid-template-rows: 60px 600px 250px;
+  grid-template-rows: 60px 600px 200px;
   grid-row-gap: 55px;
   grid-column-gap: 35px;
   padding-bottom: 35px;
   @include for-phone-only{
     grid-template-rows: 60px 600px repeat(3,75px);
-    grid-row-gap: 35px;
+    grid-row-gap: 55px;
     padding-bottom: 45px;
 
   }
@@ -204,6 +204,37 @@ section.project-sketch {
       grid-row: 5/6;
     }
   }
+}
+
+section.prototype{
+  padding-top: 35px;
+  padding-bottom: 55px;
+  border-top: 0.5px dotted $text-grey;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px repeat(3, 570px);
+  grid-row-gap: 55px;
+  @include for-phone-only{
+    grid-template-rows: 60px repeat(3, 250px);
+  }
+    aside.prototype-title{
+      grid-row:1/2;
+      grid-column: 1/2;
+    }
+    aside.prototype-box1{
+      grid-row: 2/3;
+      grid-column: 1/2;
+      //background-color: $background-image;
+    }
+    aside.prototype-box2{
+      grid-row: 3/4;
+      grid-column: 1/2;
+      //background-color: $background-image;
+    }
+    aside.prototype-box3{
+      grid-row: 4/5;
+      grid-column: 1/2;
+      //background-color: $background-image;
+    }
 }
 
 section.motion{
@@ -384,7 +415,7 @@ section.am-project-gallery{
 }
 
 
-
+//--- Moving Posters Gallery ---//
 section.project-gallery {
   border-top: 0.5px dotted $text-grey;
   padding-top: 35px;
@@ -392,6 +423,9 @@ section.project-gallery {
   grid-template-rows: 70px repeat(5, 600px);
   grid-gap: 35px;
   padding-bottom: 35px;
+  @include for-phone-only{
+    grid-template-rows: 70px repeat(5, 250px);
+  }
 
   aside.gallery-title {
     grid-column: 1/3;
