changes to canela

--- a/css/master.css
+++ b/css/master.css
@@ -6,11 +6,14 @@
 @import url("https://rsms.me/inter/inter-ui.css");
 @import url("https://fonts.googleapis.com/css?family=EB+Garamond");
 @import url("https://rsms.me/inter/inter-ui.css");
+@font-face {
+  font-family: "Canela Light";
+  src: url(../fonts/Canela-Light.woff); }
 h1,
 h2,
 h3,
 h5 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Canela-Light',serif;
   color: #2A2A2A;
   font-weight: lighter;
   margin: 5px 0 5px 0; }
@@ -974,11 +977,14 @@ section.projects {
     #milya-msg6 {
       background-image: url("../img/milya/milya-feature2-r.png"); } }
 
+@font-face {
+  font-family: "Canela Light";
+  src: url(../fonts/Canela-Light.woff); }
 h1,
 h2,
 h3,
 h5 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Canela-Light',serif;
   color: #2A2A2A;
   font-weight: lighter;
   margin: 5px 0 5px 0; }
@@ -1104,11 +1110,14 @@ p {
       font-size: 14px;
       line-height: 18px; } }
 
+@font-face {
+  font-family: "Canela Light";
+  src: url(../fonts/Canela-Light.woff); }
 h1,
 h2,
 h3,
 h5 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Canela-Light',serif;
   color: #2A2A2A;
   font-weight: lighter;
   margin: 5px 0 5px 0; }
@@ -2072,11 +2081,14 @@ section.projects {
     #milya-msg6 {
       background-image: url("../img/milya/milya-feature2-r.png"); } }
 
+@font-face {
+  font-family: "Canela Light";
+  src: url(../fonts/Canela-Light.woff); }
 h1,
 h2,
 h3,
 h5 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Canela-Light',serif;
   color: #2A2A2A;
   font-weight: lighter;
   margin: 5px 0 5px 0; }
